[package]
name = "frost"
version = "0.1.0"
edition = "2021"
description = "FROST - Fridge Remote Operations, Software, and Thermometry"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
eframe = "0.27"
egui = "0.27"
cryomech_api = { path = "../cryomech_api" }
serialport = "4"
thiserror = "1"
clap = { version = "4", features = ["derive"] }

[[bin]]
name = "frost"
path = "src/main.rs"

